tests/ui/comptime/feature-gate-test.rs
#[rustc_comptime]
//~^ ERROR use of an internal attribute
const fn foo() {}

fn main() {}
